[tool.poetry]
name = "tron-service"
version = "0.1.0"
description = ""
authors = ["scaliann <mishah238@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.2"
tronpy = "^0.5.0"
pydantic-settings = "^2.8.1"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
