[tool.poetry]
name = "tron-service"
version = "0.1.0"
description = ""
authors = ["scaliann <mishah238@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.2"
tronpy = "^0.5.0"
pydantic-settings = "^2.8.1"
aiosqlite = "^0.21.0"
alembic = "^1.15.2"
pytest-asyncio = "^0.26.0"
redis = "^5.2.1"
anyio = "^4.9.0"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
